--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10968,3 +10968,29 @@ a.text-dark:focus {
   }
 }
 
+nav {
+  margin: -23px;
+  padding-top: 10px;
+}
+
+.body-inner-of-index .index-paginate .pagination {
+  margin: 15px auto;
+  text-align: center;
+}
+
+.body-inner-of-index .input-group {
+  height: 75px;
+  margin: 20px 20px;
+  width: 100%;
+}
+
+.body-inner-of-index .input-group .search-form {
+  flex: none;
+  height: 80%;
+  width: 67%;
+}
+
+.body-inner-of-index .input-group button {
+  height: 80%;
+}
+
