--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,3 +6,35 @@
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+
+nav {
+    margin: -23px;
+    padding-top: 10px;
+}
+
+.body-inner-of-index {
+    .index-paginate {
+        .pagination {
+            margin:15px auto;
+            text-align: center;
+        }
+    }
+    
+    .input-group {
+        height: 75px;
+        margin: 20px 20px;
+        width: 100%;
+        
+        .search-form {
+            flex:none;
+            height: 80%;
+            width: 67%;
+        }
+        
+        button {
+            height: 80%;
+        }
+    }
+}
+
+
