--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -7,8 +7,33 @@
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
+a {
+  color: #606060;
+  text-decoration: none;
+  background-color: transparent;
+}
+
+a:hover {
+  color: #000;
+  text-decoration: none;
+}
+
+a:not([href]):not([class]) {
+  color: inherit;
+  text-decoration: none;
+}
+
+a:not([href]):not([class]):hover {
+  color: inherit;
+  text-decoration: none;
+}
+
+body {
+  background-color:#FBF0FF;
+}
+
 nav {
-    margin: -23px;
+    margin-top: -23px;
     padding-top: 10px;
 }
 
@@ -48,7 +73,16 @@ nav {
   box-shadow: 0 0 0 0.2rem rgba(170, 76, 211, 0.5);
 }
 
+.border-success {
+  border-color: #aa4cd3 !important;
+}
+
 .body-inner-of-index {
+  
+    .card-body {
+      font-size: 1.0rem;
+    }
+  
     .index-paginate {
         .pagination {
             margin:15px auto;
@@ -56,21 +90,12 @@ nav {
         }
     }
     
-    .input-group {
-        height: 75px;
-        margin: 20px 20px;
-        width: 100%;
-        
-        .search-form {
-            flex:none;
-            height: 80%;
-            width: 67%;
-        }
-        
-        button {
-            height: 80%;
-        }
-    }
+}
+
+.header-end {
+  background-image: repeating-linear-gradient(45deg, #aa4cd3, #aa4cd3 3px, white 3px, rgba(170, 76, 211, 0.7) 6px);
+  height: 5px;
+  width: 100%;
 }
 
 .navbar {
