--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10939,7 +10939,7 @@ a {
 }
 
 a:hover {
-  color: #000;
+  color: #aa4cd3;
   text-decoration: none;
 }
 
@@ -11002,11 +11002,23 @@ nav {
   border-color: #aa4cd3 !important;
 }
 
-.body-inner-of-index .card-body {
+.body-inner-of-index .question .card-body {
   font-size: 1rem;
 }
 
-.body-inner-of-index .index-paginate .pagination {
+.body-inner-of-index .question .card-link {
+  text-decoration: underline;
+}
+
+.body-inner-of-index .question .card-text:hover {
+  color: #000 !important;
+}
+
+.body-inner-of-index .question .user-name {
+  font-size: 1.2rem;
+}
+
+.index-paginate .pagination {
   margin: 15px auto;
   text-align: center;
 }
