questionのindexの並べ替え機能をとりあえずGood多い順と新着順で実装

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -28,6 +28,12 @@ a:not([href]):not([class]):hover {
   text-decoration: none;
 }
 
+p {
+  color: #606060;
+  text-decoration: none;
+  background-color: transparent;
+}
+
 body {
   background-color:#FBF0FF;
 }
