--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10973,6 +10973,47 @@ nav {
   padding-top: 10px;
 }
 
+.btn-success {
+  color: #fff;
+  background-color: #aa4cd3;
+  border-color: #aa4cd3;
+}
+
+.btn-success:hover {
+  color: #fff;
+  background-color: #9e43cc;
+  border-color: #9e43cc;
+}
+
+.btn-success:focus,
+.btn-success.focus {
+  color: #fff;
+  background-color: #aa4cd3;
+  border-color: #aa4cd3;
+  box-shadow: 0 0 0 0.2rem rgba(170, 76, 211, 0.5);
+}
+
+.btn-success.disabled,
+.btn-success:disabled {
+  color: #fff;
+  background-color: #aa4cd3;
+  border-color: #aa4cd3;
+}
+
+.btn-success:not(:disabled):not(.disabled):active,
+.btn-success:not(:disabled):not(.disabled).active,
+.show > .btn-success.dropdown-toggle {
+  color: #fff;
+  background-color: #aa4cd3;
+  border-color: #aa4cd3;
+}
+
+.btn-success:not(:disabled):not(.disabled):active:focus,
+.btn-success:not(:disabled):not(.disabled).active:focus,
+.show > .btn-success.dropdown-toggle:focus {
+  box-shadow: 0 0 0 0.2rem rgba(170, 76, 211, 0.5);
+}
+
 .btn-outline-success {
   color: #aa4cd3;
   border-color: #aa4cd3;
@@ -11056,14 +11097,43 @@ nav {
   border-color: #e3e3e3 !important;
 }
 
+.header-end {
+  background-image: repeating-linear-gradient(45deg, #aa4cd3, #aa4cd3 3px, white 3px, rgba(170, 76, 211, 0.7) 6px);
+  height: 5px;
+  width: 100%;
+}
+
 .index-paginate .pagination {
   margin: 15px auto;
   text-align: center;
 }
 
-.header-end {
-  background-image: repeating-linear-gradient(45deg, #aa4cd3, #aa4cd3 3px, white 3px, rgba(170, 76, 211, 0.7) 6px);
-  height: 5px;
+.user-show .profile-image {
+  height: auto;
   width: 100%;
+}
+
+.user-show .profile-image-wrapper {
+  padding: 1.5rem 20%;
+}
+
+.user-show .user-profile {
+  background: rgb(255, 255, 255);
+  border-radius: 20px;
+  padding: 30px;
+  position: relative;
+}
+
+.user-show .user-profile:after {
+  background: repeating-linear-gradient(45deg, #aa4cd3, #aa4cd3 3px, white 3px, rgba(170, 76, 211, 0.7) 6px);
+  background-color: black;
+  border-radius: 23px;
+  content: "";
+  position: absolute;
+  top: -5px;
+  bottom: -5px;
+  left: -5px;
+  right: -5px;
+  z-index: -1;
 }
 
