--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11097,6 +11097,17 @@ nav {
   border-color: #e3e3e3 !important;
 }
 
+.body-inner-of-index .side-column .good-ranking-btn {
+  color: #606060;
+  font-size: 17.6px;
+  --font-family-sans-serif: "Nunito", sans-serif;
+}
+
+.body-inner-of-index .side-column .good-ranking-btn:hover {
+  background-color: #ebebeb !important;
+  color: #aa4cd3 !important;
+}
+
 .header-end {
   background-image: repeating-linear-gradient(45deg, #aa4cd3, #aa4cd3 3px, white 3px, rgba(170, 76, 211, 0.7) 6px);
   height: 5px;
