--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -166,6 +166,7 @@ body {
 }
 
 .body-inner-of-index {
+  
   .question{
     .card-body {
       font-size: 1.0rem;
@@ -183,6 +184,10 @@ body {
     
     .card-text:hover {
       color:#000 !important;
+    }
+    
+    .good-btn {
+      font-size: 1.0rem !important;
     }
     
     .index-paginate {
@@ -228,6 +233,41 @@ body {
         color: #aa4cd3 !important;
       }
     }
+  }
+  // トップへ戻るボタン
+  #page_top{
+    width: 50px;
+    height: 50px;
+    position: fixed;
+    right: 20px;
+    bottom: 20px;
+    background: #aa4cd3;
+    opacity: 0.6;
+    border-radius: 50%;
+    z-index:10;
+  }
+  #page_top a{
+    position: relative;
+    display: block;
+    width: 50px;
+    height: 50px;
+    text-decoration: none;
+  }
+  #page_top a::before{
+    font-family: 'Font Awesome 5 Free';
+    font-weight: 900;
+    content: '\f102';
+    font-size: 25px;
+    color: #fff;
+    position: absolute;
+    width: 25px;
+    height: 25px;
+    top: -3px;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    margin: auto;
+    text-align: center;
   }
 }
 
