フッター作成

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -146,6 +146,12 @@ body {
       }
   }
   
+  .footer-start {
+    background-image: repeating-linear-gradient(45deg, #aa4cd3, #aa4cd3 3px, white 3px, rgba(170, 76, 211, 0.7) 6px);
+    height: 5px;
+    width: 100%;
+  }
+  
   .header-end {
     background-image: repeating-linear-gradient(45deg, #aa4cd3, #aa4cd3 3px, white 3px, rgba(170, 76, 211, 0.7) 6px);
     height: 5px;
