--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10968,6 +10968,12 @@ body {
   background-color: #FBF0FF;
 }
 
+@media screen and (max-width: 576px) {
+  body {
+    background-color: #fff;
+  }
+}
+
 .btn-success {
   color: #fff;
   background-color: #aa4cd3;
@@ -11163,43 +11169,6 @@ body {
   color: #aa4cd3 !important;
 }
 
-.body-inner-of-index #page_top {
-  width: 50px;
-  height: 50px;
-  position: fixed;
-  right: 20px;
-  bottom: 20px;
-  background: #aa4cd3;
-  opacity: 0.6;
-  border-radius: 50%;
-  z-index: 10;
-}
-
-.body-inner-of-index #page_top a {
-  position: relative;
-  display: block;
-  width: 50px;
-  height: 50px;
-  text-decoration: none;
-}
-
-.body-inner-of-index #page_top a::before {
-  font-family: "Font Awesome 5 Free";
-  font-weight: 900;
-  content: "\F102";
-  font-size: 25px;
-  color: #fff;
-  position: absolute;
-  width: 25px;
-  height: 25px;
-  top: -3px;
-  bottom: 0;
-  right: 0;
-  left: 0;
-  margin: auto;
-  text-align: center;
-}
-
 .modal .modal-user-btn {
   color: #606060;
   font-size: 17.6px;
@@ -11209,6 +11178,42 @@ body {
 .modal .modal-user-btn:hover {
   background-color: #ebebeb !important;
   color: #aa4cd3 !important;
+}
+
+.question-show-inner .question .card-body {
+  font-size: 1rem;
+}
+
+.question-show-inner .question .category-link {
+  background-color: transparent;
+  color: #606060;
+  font-size: 1rem !important;
+}
+
+.question-show-inner .question .card-text:hover {
+  color: #000 !important;
+}
+
+.question-show-inner .question .detail-btn {
+  background: none;
+  border: none;
+  outline: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+
+.question-show-inner .question .good-btn {
+  font-size: 1.1rem !important;
+}
+
+.question-show-inner .question .index-paginate .pagination {
+  margin: 15px auto;
+  text-align: center;
+}
+
+.question-show-inner .question .user-name {
+  font-size: 1.2rem;
 }
 
 .user-show .modal-open-btn {
@@ -11247,5 +11252,42 @@ body {
   left: -5px;
   right: -5px;
   z-index: -1;
+}
+
+#page_top {
+  width: 50px;
+  height: 50px;
+  position: fixed;
+  right: 20px;
+  bottom: 20px;
+  background: #aa4cd3;
+  opacity: 0.6;
+  border-radius: 50%;
+  z-index: 10;
+}
+
+#page_top a {
+  position: relative;
+  display: block;
+  width: 50px;
+  height: 50px;
+  text-decoration: none;
+}
+
+#page_top a:before {
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+  content: "\F102";
+  font-size: 25px;
+  color: #fff;
+  position: absolute;
+  width: 25px;
+  height: 25px;
+  top: -3px;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  margin: auto;
+  text-align: center;
 }
 
