--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -41,6 +41,9 @@ p {
 
 body {
   background-color:#FBF0FF;
+  @media screen and (max-width: 576px) {
+    background-color: #fff;
+  }
 }
 
 
@@ -251,71 +254,73 @@ body {
       }
     }
   }
-  // トップへ戻るボタン
-  #page_top{
-    width: 50px;
-    height: 50px;
-    position: fixed;
-    right: 20px;
-    bottom: 20px;
-    background: #aa4cd3;
-    opacity: 0.6;
-    border-radius: 50%;
-    z-index:10;
-  }
-  #page_top a{
-    position: relative;
-    display: block;
-    width: 50px;
-    height: 50px;
-    text-decoration: none;
-  }
-  #page_top a::before{
-    font-family: 'Font Awesome 5 Free';
-    font-weight: 900;
-    content: '\f102';
-    font-size: 25px;
-    color: #fff;
-    position: absolute;
-    width: 25px;
-    height: 25px;
-    top: -3px;
-    bottom: 0;
-    right: 0;
-    left: 0;
-    margin: auto;
-    text-align: center;
-  }
 }
 
-
-
-
-
 .modal {
-    .modal-body {
-      
-    }
+  .modal-body {
     
-    .modal-footer {
-      
-    }
+  }
   
-    .modal-header {
-      
-    }
-  
-    .modal-user-btn {
-      color: #606060;
-      font-size: 17.6px;
-      --font-family-sans-serif: "Nunito", sans-serif;
-      
-      &:hover{
-        background-color: #ebebeb !important;
-        color: #aa4cd3 !important;
-      }
+  .modal-footer {
+    
+  }
+
+  .modal-header {
+    
+  }
+
+  .modal-user-btn {
+    color: #606060;
+    font-size: 17.6px;
+    --font-family-sans-serif: "Nunito", sans-serif;
+    
+    &:hover{
+      background-color: #ebebeb !important;
+      color: #aa4cd3 !important;
     }
   }
+}
+  
+.question-show-inner {
+  .question{
+    .card-body {
+      font-size: 1.0rem;
+    }
+    .category-link {
+      background-color: transparent;
+      color: #606060;
+      font-size: 1.0rem !important;
+    }
+    
+    .card-text:hover {
+      color:#000 !important;
+    }
+    
+    .detail-btn {
+      background: none;
+    	border: none;
+    	outline: none;
+    	-webkit-appearance: none;
+    	-moz-appearance: none;
+    	appearance: none;
+    }
+    
+    .good-btn {
+      font-size: 1.1rem !important;
+    }
+    
+    .index-paginate {
+      .pagination {
+          margin:15px auto;
+          text-align: center;
+      }
+    }
+    
+    .user-name {
+      font-size: 1.2rem;
+    }
+  }
+}
   
 
 .user-show {
@@ -356,7 +361,40 @@ body {
   }
 }
 
-
-.navbar {
+// トップへ戻るボタン
+  #page_top{
+    width: 50px;
+    height: 50px;
+    position: fixed;
+    right: 20px;
+    bottom: 20px;
+    background: #aa4cd3;
+    opacity: 0.6;
+    border-radius: 50%;
+    z-index:10;
   
-}
+    & a{
+      position: relative;
+      display: block;
+      width: 50px;
+      height: 50px;
+      text-decoration: none;
+    
+      &:before{
+        font-family: 'Font Awesome 5 Free';
+        font-weight: 900;
+        content: '\f102';
+        font-size: 25px;
+        color: #fff;
+        position: absolute;
+        width: 25px;
+        height: 25px;
+        top: -3px;
+        bottom: 0;
+        right: 0;
+        left: 0;
+        margin: auto;
+        text-align: center;
+      }
+    }
+  }
