--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -300,6 +300,8 @@ body {
   
 .question-show-inner {
   .question{
+    border: thick solid rgba(170, 76, 211, 1.0) !important;
+    
     .card-body {
       font-size: 1.0rem;
     }
@@ -339,6 +341,12 @@ body {
   }
   
   .answers {
+    .answer{
+      border-top: thick solid rgba(170, 76, 211, 0.6) !important;
+      border-left: thick solid rgba(170, 76, 211, 0.6) !important;
+      border-right: thick solid rgba(170, 76, 211, 0.6) !important;
+    }
+    
     .card-body {
       font-size: 1.0rem;
     }
@@ -368,7 +376,8 @@ body {
     }
     
     .comment {
-      
+      border-left: thick dashed rgba(96, 96, 96, 0.6) !important;
+      border-right: thick dashed rgba(96, 96, 96, 0.6) !important;
     }
     
     // もっと見る機能
