--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11199,7 +11199,7 @@ body {
 }
 
 .question-show-inner .question {
-  border: thick solid rgb(170, 76, 211) !important;
+  border-bottom: 15px solid #FBF0FF !important;
 }
 
 .question-show-inner .question .card-body {
@@ -11238,14 +11238,19 @@ body {
   font-size: 1.2rem;
 }
 
-.question-show-inner .answers .answer {
-  border-top: thick solid rgba(170, 76, 211, 0.6) !important;
-  border-left: thick solid rgba(170, 76, 211, 0.6) !important;
-  border-right: thick solid rgba(170, 76, 211, 0.6) !important;
-}
-
 .question-show-inner .answers .card-body {
   font-size: 1rem;
+}
+
+.question-show-inner .answers .comment-flow-line {
+  background-color: rgba(170, 76, 211, 0.5);
+  display: block;
+  flex-grow: 1;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 4px;
+  width: 2px;
+  -webkit-box-flex: 1;
 }
 
 .question-show-inner .answers .detail-btn {
@@ -11268,11 +11273,6 @@ body {
 
 .question-show-inner .answers .user-name {
   font-size: 1.2rem;
-}
-
-.question-show-inner .answers .comment {
-  border-left: thick dashed rgba(96, 96, 96, 0.6) !important;
-  border-right: thick dashed rgba(96, 96, 96, 0.6) !important;
 }
 
 .question-show-inner .answers .list-item {
