ラジオボタンデザイン実装

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11376,6 +11376,11 @@ body {
   /* media queries */
 }
 
+.create-edit-page .country {
+  margin-right: 15px;
+  margin-left: 15px;
+}
+
 .create-edit-page .form-container {
   max-width: 600px;
   margin: 0 auto;
@@ -11549,5 +11554,48 @@ body {
   font-weight: bold;
   padding-bottom: 10px;
   margin-left: 3px;
+}
+
+.create-edit-page .inline-radio {
+  display: flex;
+  border-radius: 3px;
+  overflow: hidden;
+  border: 1px solid #aa4cd3;
+}
+
+.create-edit-page .inline-radio div {
+  position: relative;
+  flex: 1;
+}
+
+.create-edit-page .inline-radio input {
+  width: 100%;
+  height: 60px;
+  opacity: 0;
+}
+
+.create-edit-page .inline-radio label {
+  position: absolute;
+  top: 0;
+  left: 0;
+  color: #969696;
+  width: 100%;
+  height: 100%;
+  background: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  pointer-events: none;
+  border-right: 1px solid #b6b6b6;
+}
+
+.create-edit-page .inline-radio div:last-child label {
+  border-right: 0;
+}
+
+.create-edit-page .inline-radio input:checked + label {
+  background: #aa4cd3;
+  font-weight: 500;
+  color: #fff;
 }
 
